# locontext

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
.github/: commit-message-rules.md  pull_request_template.md
.github/workflows/: live-public-smoke.yml  pr-governance.yml  verify.yml
docs/: decision-backlog.md
docs/adr/: 0001-product-direction.md  0002-v1-architecture.md  0003-v1-retrieval-and-store.md  0004-source-identity-and-refresh.md
scripts/: check_commit_message.py  check_pr_governance.py
src/locontext/: __init__.py
src/locontext/app/: __init__.py  query.py  refresh.py  sources.py
src/locontext/cli/: __init__.py  main.py  runtime.py
src/locontext/config/: __init__.py  settings.py
src/locontext/dev/: __init__.py  eval_query_quality.py  live_public_smoke.py
src/locontext/domain/: __init__.py  contracts.py  models.py
src/locontext/engine/: __init__.py  noop.py  sqlite_lexical.py
src/locontext/sources/: __init__.py
src/locontext/store/: __init__.py  migrations.py  schema.sql  sqlite.py
tests/: conftest.py  test_chunking_engine.py  test_cli_doctor_command.py  test_cli_init_command.py  test_cli_query_command.py  test_cli_refresh_commands.py  test_cli_source_commands.py  test_cli_source_sets.py  test_cli_status_command.py  test_live_public_smoke.py  test_live_public_smoke_contract.py  test_live_public_smoke_metrics.py  test_query_app.py  test_query_contract_semantic_readiness.py  test_query_quality_baseline.py  test_query_quality_metrics.py  test_query_trace.py  test_refresh_freshness.py  test_refresh_orchestration.py  test_source_registry.py  test_source_sets.py  test_source_status.py  test_sqlite_lexical_engine.py  test_store_migrations.py  test_web_canonicalize.py  test_web_discovery.py  test_web_docset_crawl.py  test_web_extract.py  test_web_fetch.py  test_web_policy.py  test_web_provider.py
tests/integration/dev/: test_live_public_smoke.py
tests/unit/: test_commit_message_validator.py  test_pr_governance_validator.py
tests/unit/app/: test_query_app.py  test_query_contract_semantic_readiness.py  test_query_quality_baseline.py  test_query_quality_metrics.py  test_query_trace.py  test_refresh_freshness.py  test_refresh_orchestration.py  test_source_registry.py  test_source_sets.py  test_source_status.py
tests/unit/cli/: test_cli_doctor_command.py  test_cli_init_command.py  (+5 more)
(+21 files in other folders)
